k8s/microfrontends-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vucem-frontend-svc
  namespace: vucem-${ENV}
  labels:
    app: vucem-microfrontends
    env: ${ENV}
    tier: frontend
spec:
  selector:
    app: vucem-microfrontends
    env: ${ENV}
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
